Refactored to have a field for userId.